Fix help popover z-index in accordion menus mode
In accordion mode, menus have highest z-index than the popover one.
This hide the arrow of the help popover.

--- a/src/core/nav/nav-menu.module.scss
+++ b/src/core/nav/nav-menu.module.scss
@@ -280,6 +280,10 @@
   }
 }
 
+.helpPopover {
+  z-index: calc(var(--ax-theme-nav-menu-zIndex, 1000) + 1) !important;
+}
+
 //
 // Search
 //
